# ldata2010_celeba_visualizer

./: .gitignore  .pdm-python  .pre-commit-config.yaml  Data Analysis.ipynb  Makefile  README.md  TNSE+UMAP_experiment_embeddings_improvement.ipynb  cluster_and_tnse_update.ipynb  constants.py  eda.ipynb  environment.yml  main.py  precompute_datasets.py  precompute_ndarray.py  pyproject.toml  pyrightconfig.json  requirements.txt
assets/: common.css
cache/: cache.db
notebooks/: 3_cluster_techniques_features+embeddings copy.ipynb  TNSE_2method_features+embeddings.ipynb  eda.ipynb
precomputed/: celeba_buffalo_l__embeddings_tsne.npy  celeba_buffalo_l__embeddings_tsne_exaggeration_12.npy  celeba_buffalo_l__embeddings_umap.npy  celeba_buffalo_l__features_tsne.npy  celeba_buffalo_l__features_tsne_exaggeration_12.npy  celeba_buffalo_l__features_umap.npy  celeba_buffalo_s__embeddings_tsne.npy  celeba_buffalo_s__embeddings_tsne_exaggeration_12.npy  celeba_buffalo_s__embeddings_umap.npy  celeba_buffalo_s__features_tsne.npy  celeba_buffalo_s__features_tsne_exaggeration_12.npy  celeba_buffalo_s__features_umap.npy
ui/: app.py  ids.py  utils.py
ui/components/: aside.py  buttons.py  features_selection.py  graph.py  header.py  inputs.py  modal.py  navbar.py
ui/components/tabs/correlation_matrixes/: correlation_matrix.py  correlation_matrix_features.py
ui/components/tabs/dr_clustering/: clustering.py  dr.py  layout.py
ui/components/tabs/features_plots/: features_histogram.py  features_plots.py  sorted_features_presence.py
ui/components/tabs/photo_gallery/: gallery.py
