[tool.pdm.build]
includes = []
[project]
name = "ldata2010-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Mathieu-R", email = "mathieu0709@gmail.com"},
]
dependencies = [
    "pandas<3.0.0,>=2.1.2",
    "numpy<2.0.0,>=1.26.1",
    "matplotlib<4.0.0,>=3.8.1",
    "dash-bootstrap-components<2.0.0,>=1.5.0",
    "seaborn<1.0.0,>=0.13.0",
    "dash-extensions<2.0.0,>=1.0.4",
    "pyarrow<15.0.0,>=14.0.1",
    "fastparquet<2024.0.0,>=2023.10.1",
    "scikit-learn<2.0.0,>=1.3.2",
    "umap-learn<1.0.0,>=0.5.5",
    "hdbscan<1.0.0,>=0.8.33",
    "diskcache>=5.6.3",
    "dash[diskcache]>=2.14.2",
]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = {text = "MIT"}